Add image to meta data

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,13 +9,13 @@
       name="description"
       content="Web-based distribution management system"
     />
-    <meta property="og:image" content="../src/assets/images/CDS.JPG">
-    <meta name="author" content="Denisse Mendoza">
-    <meta name="author" content="Zoraiz Naeem">
-    <meta name="author" content="Tylor Autore">
-    <meta name="author" content="Abdul-Quddus Adeniji">
-    <meta name="keywords" content="Software Engineer, web application, distribution system">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <meta property="og:image" content="%PUBLIC_URL%/CDS.JPG" />
+    <meta name="author" content="Denisse Mendoza" />
+    <meta name="author" content="Zoraiz Naeem" />
+    <meta name="author" content="Tylor Autore" />
+    <meta name="author" content="Abdul-Quddus Adeniji" />
+    <meta name="keywords" content="Software Engineer, web application, distribution system" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
     <title>Distribution System</title>
   </head>
   <body>
